Lab11 16/App4/app4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-svc
spec:
  selector:
    app: app4
  ports:
  - name: http-default
    port: 80
