Lab11 16/App4/app4-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app4-destinationrules
spec:
  host: app4-svc.default.svc.cluster.local
  subsets:
  - name: app4-v1-subset
    labels:
      app: app4
      version: v1
